Forgot to change hostname in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id='previousCommands' class="commands">
         </div>
         <div id='currentInput' class='input'>
-            <p class='user bold'>guest@bennet.page</p>
+            <p class='user bold'>guest@bennet.tech</p>
             <p>:</p>
             <p class='cursor bold'>~</p>
             <p>$&nbsp;</p>
