--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Bennet Deboben</title>
+        <meta name="description" content="Bennet Deboben's web... terminal" />
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" src='js/data.js'></script>
         <script type="text/javascript" src='js/commands.js'></script>
