--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Bennet Deboben</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Bennet Deboben's web... terminal" />
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" src='js/data.js'></script>
