Add description and author

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Bennet Deboben</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Bennet Deboben's web... terminal" />
+        <meta name="author" content="Bennet Deboben"/>
+        <meta name="keywords" content="Bennet Deboben, Portfolio, Developer, IT"/>
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" src='js/data.js'></script>
         <script type="text/javascript" src='js/commands.js'></script>
