Update volume renderer address

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <span class="pill"><img src="img/rust.svg">Rust</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://github.com/bennetde/particles" target="_blank">View more</a>
+                    <a class="button" href="https://github.com/bennetde/volume-renderer" target="_blank">View more</a>
                 </div>
             </div>
             <div class="project">
