Add chevron down, update icon colors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             </div>
             <div id="separator">
                 <a href="#about-me">See more</a>
+                <br>
+                <img src="img/chevron-down.svg">
             </div>
             <div id="about-me">
                 <h2>About me</h2>
