Fix see more button to have larger interaction area

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
                 <a href="mailto:bennet@deboben.de"><span class="bigpill"><img src="img/mail.svg"></span></a>
             </div>
             <div id="separator">
-                <a href="#about-me">See more</a>
-                <br>
-                <img src="img/chevron-down.svg">
+                <a href="#about-me">See more<br><img src="img/chevron-down.svg"></a>
             </div>
             <div id="about-me">
                 <h2>About me</h2>
@@ -65,7 +63,7 @@
                     <span class="pill"><img src="">C#</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://richwill.itch.io/box-chaos" target="_blank">View more</a>
+                    <a class="button" href="https://richwill.itch.io/box-chaos" target="_blank">Project Page</a>
                 </div>
             </div>
             <div class="project">
@@ -88,7 +86,7 @@
                     <span class="pill"><img src="img/rust.svg">Rust</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://github.com/bennetde/volume-renderer" target="_blank">View more</a>
+                    <a class="button" href="https://github.com/bennetde/volume-renderer" target="_blank">Project Page</a>
                 </div>
             </div>
             <div class="project">
@@ -112,7 +110,7 @@
                     <span class="pill"><img src="img/cplusplus.svg">C++</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://github.com/bennetde/particles" target="_blank">View more</a>
+                    <a class="button" href="https://github.com/bennetde/particles" target="_blank">Project Page</a>
                 </div>
             </div>
             <div class="project">
@@ -136,7 +134,7 @@
                     <span class="pill"><img src="img/cplusplus.svg">C++</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://github.com/bennetde/swevisualizer" target="_blank">View more</a>
+                    <a class="button" href="https://github.com/bennetde/swevisualizer" target="_blank">Project Page</a>
                 </div>
             </div>
             <div id="footer">
