--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Bennet Deboben</title>
         <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 	</head>
 	<body>
         <div id="container">
