Updated box chaos description

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img src="img/boxchaos.png">
                 </div>
                 <div class="content">
-                    <p><b>About</b>: Box Chaos is a local multiplayer game about sorting in boxes onto their correct conveyor belts as fast as possible. Collaboration and quick thinking are needed to overcome ever fasting coming packages.</p>
+                    <p><b>About</b>: Box Chaos is a fast-paced local multiplayer game where players must quickly sort packages onto the correct conveyor belts. Teamwork and sharp decision-making are essential to keep up with the ever-increasing flow and speed of incoming packages.</p>
                     <p>Created in 4 days as part of the "TUM Games Engineering Nachprojekte".</p>
                     <p><b>My role</b>: Game Designer / Game Programmer</p>
                     <p><b>Game Design</b>: Designed player controller, base game idea, and balanced difficulty progression</p>
