Update texts, update icons

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 <p>Programming Languages:</p>
                 <span class="pill"><img src="img/rust.svg">Rust</span>
                 <span class="pill"><img src="img/cplusplus.svg">C++</span>
-                <span class="pill">C#</span>
-                <span class="pill">JavaScript</span>
+                <span class="pill"><img src="img/csharp.svg">C#</span>
+                <span class="pill"><img src="img/javascript.svg">JavaScript</span>
                 <p>Tools:</p>
                 <span class="pill"><img src="img/unity.svg">Unity</span>
                 <span class="pill"><img src="img/godotengine.svg">Godot</span>
-                <span class="pill"><img src="img/godotengine.svg">Unreal Engine</span>
+                <span class="pill"><img src="img/unrealengine.svg">Unreal Engine</span>
                 <span class="pill"><img src="img/git.svg">Git</span>
                 <span class="pill"><img src="img/docker.svg">Docker</span>
                 <p>Tech:</p>
                 <span class="pill"><img src="img/vulkan.svg">Vulkan</span>
                 <span class="pill"><img src="img/opengl.svg">OpenGL</span>
-                <span class="pill"><img src="img/wgpu.svg">WebGPU</span>
-                <span class="pill"><img src="img/wgpu.svg">ThreeJS</span>
+                <span class="pill"><img src="img/webgpu.svg">WebGPU</span>
+                <span class="pill"><img src="img/threejs.svg">ThreeJS</span>
             </div>
             <h1 class="projects">Projects</h1>
             <div class="project">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="bottombar">
                     <span class="pill"><img src="img/unity.svg">Unity</span>
-                    <span class="pill"><img src="">C#</span>
+                    <span class="pill"><img src="img/csharp.svg">C#</span>
                 </div>
                 <div class="bottombar right">
                     <a class="button" href="https://richwill.itch.io/box-chaos" target="_blank">Project Page</a>
@@ -83,7 +83,7 @@
                     <p>Overall, the renderer can display high resolution (i.e. 1024x1024x1024) volumes with a frametime less than 60ms at a 1024x1024 resoultion.</p>
                 </div>
                 <div class="bottombar">
-                    <span class="pill"><img src="img/vulkan.svg">WebGPU</span>
+                    <span class="pill"><img src="img/webgpu.svg">WebGPU</span>
                     <span class="pill"><img src="img/rust.svg">Rust</span>
                 </div>
                 <div class="bottombar right">
@@ -100,7 +100,7 @@
                     <img src="img/particles.png">
                 </div>
                 <div class="content">
-                    <p><b>About</b>: Particles is a particles physics simulation inspired by <a>Clusters</a> introduced by <a>this guy</a>.</p>
+                    <p><b>About</b>: Particles is a particles physics simulation inspired by <a>Clusters</a> introduced by <a href="https://www.ventrella.com/Clusters/intro.html" target="_blank">Jeffrey Ventrella</a>.</p>
                     <p>Written as a project for learning the Vulkan graphics API.</p>
                     <p>To overcome the limited amount of particles, I further added a compute shader system to simulate particles directly on the GPU. This 
                         increased the amount of simulatenous particles from ~200 to over 32.000.
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div id="footer">
-                <p>Made with 🍝 code, hosted on GitHub</p>
+                <p>© 2025 Bennet Deboben | Made with 🍝 code | Hosted on GitHub Pages</p>
             </div>
             <canvas id="three-canvas"></canvas>
         </div>
