--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             </div>
             <div id="about-me">
                 <h2>About me</h2>
-                <p>My name is Bennet. I am <span id="age">24</span> years old. I graduated from TU Munich as a bachelor of science in Informatics at the end of 2024.
-                I am interested in all and everything regarding computer graphics and game programming. Feel free to check out my 
-                projects at the bottom of this page.</p>
+                <p>Hey, I am Bennet Deboben. Right now I am <span id="age">24</span> years old, living near Munich in Germany! 
+                I graduated from TU Munich as a Bachelor of Science in Informatics near the end of 2024.
+                I love video games and graphics programming, which is the main focus of my personal projects!
+                Feel free to check them out at the bottom of this site!</p>
+
                 <h2>Skills</h2>
                 <p>Programming Languages:</p>
                 <span class="pill"><img src="img/rust.svg">Rust</span>
@@ -64,7 +66,7 @@
                     <span class="pill"><img src="img/csharp.svg">C#</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://richwill.itch.io/box-chaos" target="_blank">Project Page</a>
+                    <a class="button" href="https://richwill.itch.io/box-chaos" target="_blank">Project Page <img src="img/external-link.svg"></a>
                 </div>
             </div>
             <div class="project">
@@ -87,7 +89,7 @@
                     <span class="pill"><img src="img/rust.svg">Rust</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://github.com/bennetde/volume-renderer" target="_blank">Project Page</a>
+                    <a class="button" href="https://github.com/bennetde/volume-renderer" target="_blank">Project Page <img src="img/external-link.svg"></a>
                 </div>
             </div>
             <div class="project">
@@ -111,7 +113,7 @@
                     <span class="pill"><img src="img/cplusplus.svg">C++</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://github.com/bennetde/particles" target="_blank">Project Page</a>
+                    <a class="button" href="https://github.com/bennetde/particles" target="_blank">Project Page <img src="img/external-link.svg"></a>
                 </div>
             </div>
             <div class="project">
@@ -135,7 +137,7 @@
                     <span class="pill"><img src="img/cplusplus.svg">C++</span>
                 </div>
                 <div class="bottombar right">
-                    <a class="button" href="https://github.com/bennetde/swevisualizer" target="_blank">Project Page</a>
+                    <a class="button" href="https://github.com/bennetde/swevisualizer" target="_blank">Project Page <img src="img/external-link.svg"></a>
                 </div>
             </div>
             <div id="footer">
